# pytest-molecule

./: .pre-commit-config.yaml  .travis.yml  .yamllint  README.rst  ansible.cfg  azure-pipelines.yml  bindep.txt  mypy.ini  pyproject.toml  pytest.ini  pytest_molecule.py  setup.cfg  setup.py  tox.ini
.azure-pipelines/jobs/: test.yml
.github/: dependabot.yml  labels.yml  release-drafter.yml
.github/workflows/: release.yml  tox.yml
pytest_molecule/: __init__.py
src/pytest_molecule/: __init__.py
tests/: conftest.py
tests/roles/base_config/molecule/s1/: converge.yml  molecule.yml  prepare.yml
tests/roles/ensure-ansible/meta/: main.yml
tests/roles/ensure-ansible/molecule/: Dockerfile.j2
tests/roles/ensure-ansible/molecule/default/: converge.yml  molecule.yml  playbook.yml
tests/roles/ensure-ansible/tasks/: main.yml
tests/roles/ensure-ansible/vars/: centos-7.yml  debian-10.yml  family-redhat.yml  redhat-8.yml  redhat.yml  ubuntu.yml
tests/roles/foo/molecule/default/: converge.yml  molecule.yml
tests/roles/foo/molecule/disabled/: converge.yml  molecule.yml
tests/roles/myrole/meta/: main.yml
tests/roles/myrole/molecule/default/: molecule.yml  playbook.yml
tests/roles/myrole/molecule/other/: playbook.yml
tests/roles/myrole/tasks/: main.yml
tests/roles/no_drivers/molecule/default/: molecule.yml
tests/roles/no_platforms/molecule/default/: molecule.yml
tools/: test-setup.sh
zuul.d/: layout.yaml
