[aliases]
dists = clean --all sdist bdist_wheel

[bdist_wheel]
universal = 1

[metadata]
name = pytest-molecule
url = https://github.com/ansible-community/pytest-molecule
project_urls =
    Bug Tracker = https://github.com/ansible-community/pytest-molecule/issues
    Release Management = https://github.com/ansible-community/pytest-molecule/releases
    CI: Zuul = https://dashboard.zuul.ansible.com/t/ansible/builds?project=ansible-community/pytest-molecule
    Source Code = https://github.com/ansible-community/pytest-molecule
description = PyTest Molecule Plugin :: discover and run molecule tests
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Sorin Sbarnea
author_email = sorin.sbarnea@gmail.com
maintainer = Sorin Sbarnea
maintainer_email = sorin.sbarnea@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Framework :: Pytest
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Testing
    Topic :: System :: Systems Administration
    Topic :: Utilities

keywords =
    ansible
    roles
    testing
    molecule
    pytest
    plugin

[options]
use_scm_version = True
python_requires = >=3.6
packages = find:
include_package_data = True
zip_safe = False

# These are required during `setup.py` run:
setup_requires =
    setuptools_scm >= 1.15.0
    setuptools_scm_git_archive >= 1.0

# These are required in actual runtime, with few remarks
# * ansi2html not really needed but enables ANSI coloring on pytest-html
# * pytest-html not really needed but high-likely to be used
#   https://github.com/pytest-dev/pytest-html/issues/282
# These added as requirements because recent changes related to them broke
# many projects using pytest-molecule. By listing them as dependencies we
# avoid installing versions that are not compatible.
install_requires =
    ansi2html
    molecule >= 3.0.4
    pytest >= 3.50
    pytest-html < 2; python_version<"3.0"
    pytest-html; python_version>="3.0"
    pytest-plus
    pyyaml >= 5.1, < 6
    # https://github.com/pytest-dev/pytest/issues/5854
    more_itertools >= 5, < 6; python_version<"3.0"
    more_itertools >= 6; python_version>="3.0"

[options.extras_require]
docker =
    docker>=4.0.1
    paramiko>=2.5.0

[options.entry_points]
pytest11 =
    molecule = pytest_molecule

[options.packages.find]
where = .
